--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,34 @@
+h1 {
+font-size: 30px;
+text-align: center;
+padding: 20px;
+font-weight: bolder;
+}
+
 th {
-text-align: center
+text-align: center;
+padding: 10px;
+font-size: 20px;
+font-weight: bold;
 }
 
 td {
-text-align: center
+text-align: center;
+padding-bottom: 10px;
+font-size: 18px;
+}
+
+
+.freq {
+	margin-left: 0px;
+	padding-left: 0px;
+	width: 350px;
+}
+
+.train {
+	width: 350px;
+}
+
+.dest {
+	width: 350px;
+}
